syntax="proto3";

option go_package = "./proto";

package blog;

service BlogService {
  rpc CreatePost (PostRequest) returns (PostResponse);
  rpc ReadPost (PostIdRequest) returns (PostResponse);
  rpc UpdatePost (UpdatePostRequest) returns (PostResponse);
  rpc DeletePost (PostIdRequest) returns (DeleteResponse);
}

message PostRequest {
  string title = 1;
  string content = 2;
  string author = 3;
  string publication_date = 4;
  repeated string tags = 5;
}

message PostResponse {
  string post_id = 1;
  string title = 2;
  string content = 3;
  string author = 4;
  string publication_date = 5;
  repeated string tags = 6;
  string error_message = 7;
}

message PostIdRequest {
  string post_id = 1;
}

message UpdatePostRequest {
  string post_id = 1;
  string title = 2;
  string content = 3;
  string author = 4;
  repeated string tags = 5;
}

message DeleteResponse {
  bool success = 1;
  string error_message = 2;
}
